# 42sh

./: .gitignore  LICENSE  Makefile.am  README  README.md  config.h  configure.ac  script.sh  test_echo
src/: 42sh.c  Makefile.am
src/ast/: Makefile.am  ast.c  ast.h  ast_assignment.c  ast_basics.c  ast_block.c  ast_commands.c  ast_core.c  ast_free.c  ast_free.h  ast_operators.c  ast_printer.c  ast_printer.h  ast_redir.c
src/builtins/: Makefile.am  break.c  break.h  cd.c  cd.h  echo.c  echo.h  exit.c  exit.h
src/execution/: Makefile.am  condition.c  condition.h  execution.c  execution.h  functions.c  functions.h  loop.c  loop.h  redir_pipe.c  redir_pipe.h
src/expansion/: Makefile.am  expand.c  expand.h  hashmap.c  hashmap.h
src/io/: Makefile.am  io.c  io.h
src/lexer/: Makefile.am  lexer.c  lexer.h  lexer_internal.c  lexer_internal.h  lexer_ops.c  lexer_word.c
src/lexer/token/: token.c  token.h
src/parser/: Makefile.am  main  main.c  parser.c  parser.h  parser_and_or.c  parser_assignment.c  parser_command.c  parser_for.c  parser_if.c  parser_input.c  parser_internal.h  parser_list.c  parser_pipeline.c  parser_redir.c  parser_shell_command.c  parser_simple_command.c  parser_while.c  parser_while_until.c  tests.sh
src/utils/: Makefile.am
src/utils/fifo/: fifo.h
src/utils/parser/: Makefile.am  pretty_printer.c  pretty_printer.h
src/utils/stack/: Makefile.am  stack.c  stack.h
src/utils/str/: Makefile.am  str.c  str.h
tests/: Makefile.am  run_tests.sh  runner.py  test_ast  test_builtins  test_execution  test_io  test_lexer  test_parser
tests/old/: run_all_tests.sh  runner.py
tests/script/: echo_var_env.sh  echo_var_others.sh  if_in_if_elif.sh  script1.sh  script_basic_if.sh  script_fill_nl.sh  script_until.sh
tests/script/and/: and.sh
tests/script/if/: script_basic_if.sh  script_nl_semi_nl.sh
tests/script/loop/: script_2_for.sh  script_until.sh  script_while.sh
tests/script/moulinette/: if_vs_operation.sh
tests/script/pipeline/: pipeline.sh
tests/script/piscine/: ascii_house.sh  tower.sh
tests/script/variables/: echo_var_all.sh  var_#.sh  var_@.sh  var_arg.sh  var_dollar.sh  var_env.sh  var_env_2.sh  var_question.sh  var_random.sh  var_star.sh  var_star_ifs.sh  var_uid.sh
tests/step1_simple/: test_echo.py
tests/unit/: test.h  test_ast.c  test_ast_printer.c  test_echo.c  test_execution.c  test_io.c  test_io_stdin_to_file.c  test_io_string_to_file.c  test_lexer.c  test_parser.c  unit_test.c
